src/test/ui/consts/min_const_fn/promotion.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/promotion.rs:8:28
   |
LL |     let y: &'static i32 = &foo2(42); //~ ERROR does not live long enough
   |                            ^^^^^^^^ temporary value does not live long enough
LL | }
   | - temporary value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
